# OxfordADH2025PythonBootcamp

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-light.txt  requirements.txt
notebooks/: 00_scrub_in_systems_check.ipynb  01_python_first_dose.ipynb  02_project_medvision_lab.ipynb
src/medvision_toolkit/: __init__.py  radiology_helpers.py
src/medvision_toolkit/learning/: __init__.py  imaging_helpers.py  patient_profiles.py
tests/: __init__.py
tests/integration/: __init__.py  test_radiology_helpers.py
tests/unit/: __init__.py  test_imaging_helpers.py  test_patient_profiles.py  test_radiology_helpers.py
