[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medvision-toolkit"
version = "0.1.0"
description = "AI-powered medical imaging analysis toolkit for Project MedVision"
readme = "README.md"
requires-python = ">=3.9"
# Minimal dependencies for patient profile utilities (Notebooks 00 & 01)
dependencies = [
    "Pillow>=9.0.0",
    "requests>=2.28.0",
    "matplotlib>=3.5.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# AI inference dependencies (Notebook 02 only)
# Install with: pip install -e ".[ai]"
ai = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "llama-cpp-python>=0.2.90",
]

# Development and testing tools
dev = [
    "pytest>=7.0.0",
    "black[jupyter]>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests",
    "types-Pillow",
]

# Full install (all optional dependencies)
all = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "llama-cpp-python>=0.2.90",
    "pytest>=7.0.0",
    "black[jupyter]>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests",
    "types-Pillow",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["notebooks"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
